[package]
name = "hubpack"
version = "0.1.2"
edition = "2021"
description = "A predictable serialization format"
license = "MPL-2.0"
repository = "https://github.com/cbiffle/hubpack/"
keywords = ["serde", "embedded", "no_std"]
readme = "README.mkdn"

[dependencies]
serde = { version = "1.0.136", default-features = false }
hubpack_derive = { path = "derive", version = "0.1.0" }

[dev-dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive"] }

[workspace]
members = ["derive"]
